# redis-doctor

./: .gitignore  Dockerfile  README.md  pyproject.toml  redis-doctor.example.yml  redis-doctor.spec
.github/workflows/: ci.yml  release.yml
docs/: README.md
docs/html/: configuration.html  examples.html  findings-catalog.html  getting-started.html  index.html  installation.html  output-and-exit-codes.html  safety.html
docs/md/: configuration.md  examples.md  findings-catalog.md  getting-started.md  index.md  installation.md  output-and-exit-codes.md  safety.md
docs/tools/: converter.py
redis_doctor/: __init__.py  __main__.py  cli.py  config.py  connection.py  errors.py  explore.py  logging.py  pipeline.py  rule_engine.py  safety.py  scoring.py  suppress.py
redis_doctor/analyzers/: base.py  bigkey_rules.py  client_rules.py  cluster_rules.py  config_rules.py  keyspace_rules.py  latency_rules.py  memory_rules.py  persistence_rules.py  replication_rules.py  scripting_rules.py  security_rules.py  sentinel_rules.py  server_rules.py  slowlog_rules.py  stream_rules.py  ttl_rules.py  type_rules.py
redis_doctor/collectors/: base.py  clients.py  cluster.py  config_values.py  info.py  keyspace.py  latency.py  memory.py  persistence.py  replication.py  scripting.py  security.py  sentinel.py  slowlog.py  streams.py
redis_doctor/gui/: server.py
redis_doctor/history/: diff.py  store.py
redis_doctor/models/: client.py  finding.py  report.py  sample.py  server.py  slowlog.py  stream.py  target.py
redis_doctor/output/: pdf.py  (+3 more)
rules/: default.yml
tests/: conftest.py
(+80 files in other folders)
