[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redis-doctor"
version = "1.0.0"
description = "Diagnose the production health of a Redis deployment and explain every problem found."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Axiros" }]
dependencies = [
    "typer>=0.12",
    "redis>=5",
    "rich>=13",
    "pydantic>=2",
    "pyyaml>=6",
]

[project.optional-dependencies]
tui = ["textual>=0.60"]
gui = ["fastapi>=0.110", "uvicorn>=0.29", "weasyprint>=61", "apscheduler>=3.10"]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "fakeredis>=2.20",
    "ruff>=0.5",
    "httpx>=0.27",
]
all = [
    "redis-doctor[tui,gui,dev]",
]

[project.scripts]
redis-doctor = "redis_doctor.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["redis_doctor"]

[tool.hatch.build.targets.wheel.force-include]
"rules/default.yml" = "redis_doctor/rules/default.yml"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "B008",   # typer uses function calls in defaults
    "UP042",  # spec mandates `class X(str, Enum)` (Section 4.1)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require a real Redis instance",
]
